--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> 
 </head>
 <body>
-<div class="container">  <h1>My First Bootstrap Page</h1>  <p>This is some text.</p> </div>
+<div id="wrapper"> 
+<nav class="navbar navbar-expand-sm bg-light">  
+<ul class="navbar-nav">
+<li class="nav-item">  
+<a class="nav-link" href="#">Все</a>    
+</li>  
+<li class="nav-item">
+<a class="nav-link" href="#">Новые</a>   
+</li>
+<li class="nav-item">  
+<a class="nav-link" href="#">Хиты продаж</a>  
+</li> 
+<li class="nav-item"> 
+ <a class="nav-link" href="#">Развлечения и отдых</a>  
+</li> 
+<li class="nav-item">  
+<a class="nav-link" href="#">Красота и здоровье</a>  
+</li> 
+  <li class="nav-item">  
+<a class="nav-link" href="#">Спорт</a>  
+</li>
+    <li class="nav-item">  
+<a class="nav-link" href="#">Товары</a>  
+</li> 
+    <li class="nav-item">  
+<a class="nav-link" href="#">Услуги</a>  
+</li> 
+    <li class="nav-item">  
+<a class="nav-link" href="#">Еда</a>  
+</li> 
+    <li class="nav-item">  
+<a class="nav-link" href="#">Туризм, отели</a>  
+</li> 
+</ul>
+</nav>
+<br>
+</div>
 </body>
 </html>
