--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
 </li> 
 </ul>
 </nav>
+ <div class="b-boards">
+    <div class="b-boards__wrapper">
+                    <a class="e-board" href="https://chocolife.me/razvlecheniya-dlya-detey/"
+               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/1/2_2017120509125215124439321613_1_2017112201111615112924368179__D0_B4_D0_BB_D1_8F_.jpg?45115') no-repeat center;"></a>
+                    <a class="e-board" href="https://chocolife.me/referal/"
+               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/2/2_201712060912271512532347948_4ef95d47-9b4e-4906-a7b6-bf0ebebdfd9f.jpg?26234') no-repeat center;"></a>
+                    <a class="e-board" href="https://chocolife.me/razvlecheniya-i-otdykh/"
+               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/3/3_201802080423615180861362712_12ae1fd8-f4fe-4895-bdd8-98b775f27a30.jpg?98192') no-repeat center;"></a>
+                    <a class="e-board" href="https://chocolife.me/aktivniy-otdykh/"
+               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/4/5_201801161015615160765161747_d0169947-dd06-4063-bde0-47a2d7441c28.jpg?44348') no-repeat center;"></a>
+            </div>
+</div>
 <br>
 </div>
 </body>
