--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 </li> 
 </ul>
 </nav>
- <div class="b-boards">
-    <div class="b-boards__wrapper">
+ <div class="boards">
+    <div class="boards_wrapper">
                     <a class="e-board" href="https://chocolife.me/razvlecheniya-dlya-detey/"
                style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/1/2_2017120509125215124439321613_1_2017112201111615112924368179__D0_B4_D0_BB_D1_8F_.jpg?45115') no-repeat center;"></a>
                     <a class="e-board" href="https://chocolife.me/referal/"
