--- a/index.html
+++ b/index.html
@@ -45,18 +45,21 @@
 </li> 
 </ul>
 </nav>
- <div class="boards">
-    <div class="boards_wrapper">
-                    <a class="e-board" href="https://chocolife.me/razvlecheniya-dlya-detey/"
-               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/1/2_2017120509125215124439321613_1_2017112201111615112924368179__D0_B4_D0_BB_D1_8F_.jpg?45115') no-repeat center;"></a>
-                    <a class="e-board" href="https://chocolife.me/referal/"
-               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/2/2_201712060912271512532347948_4ef95d47-9b4e-4906-a7b6-bf0ebebdfd9f.jpg?26234') no-repeat center;"></a>
-                    <a class="e-board" href="https://chocolife.me/razvlecheniya-i-otdykh/"
-               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/3/3_201802080423615180861362712_12ae1fd8-f4fe-4895-bdd8-98b775f27a30.jpg?98192') no-repeat center;"></a>
-                    <a class="e-board" href="https://chocolife.me/aktivniy-otdykh/"
-               style="background: url('https://static.chocolife.me/static/upload/images/town/for_town_board/4/5_201801161015615160765161747_d0169947-dd06-4063-bde0-47a2d7441c28.jpg?44348') no-repeat center;"></a>
-            </div>
-</div>
+ <div class="e-deal__imgs">
+		    <a href="https://chocolife.me/39540-srk-tabagan/"  >
+						<img
+				width="315"
+				height="315"
+				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/39540.jpg?v=1514292623"
+				class="e-plate__img"
+				alt="Экстремально круто! Абсолютно новый снежный склон ждет вас! Катания на лыжах и сноуборде для взрослых и детей со скидкой до 30% в СРК Табаган!"
+				/>
+			</a>
+					<a href="https://chocolife.me/39540-srk-tabagan/" class="e-link--deal plate_link">
+				Подробнее
+			</a>
+	</div>
+<div class="b-deals__standard_plate__counter" style="left: 14px;top: 280px;color: #005b92;">
 <br>
 </div>
 </body>
