--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </li> 
 </ul>
 </nav>
- <div class="e-deal__imgs">
+ <div class="images">
 		    <a href="https://chocolife.me/39540-srk-tabagan/"  >
 						<img
 				width="315"
@@ -59,7 +59,8 @@
 				Подробнее
 			</a>
 	</div>
-<div class="b-deals__standard_plate__counter" style="left: 14px;top: 280px;color: #005b92;">
+<div class="text" style="left: 14px;top: 280px;color: #005b92;">Купили: 2198	
+</div>
 <br>
 </div>
 </body>
