--- a/index.html
+++ b/index.html
@@ -61,7 +61,24 @@
 	</div>
 <div class="text" style="left: 14px;top: 280px;color: #005b92;">Купили: 2198	
 </div>
-<br>
+</div>
+	<div class="images1">
+		    <a href="https://chocolife.me/38525-tau-spa-center/"  >
+						<img
+				width="315"
+				height="315"
+				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/38525.jpg?v=1514447453"
+				class="e-plate__img"
+				alt="Еще дешевле! Посетите уникальный Тау SPA-center в будние и выходные дни со скидкой 61%!"
+				/>
+			</a>
+					<a href="https://chocolife.me/38525-tau-spa-center/" class="e-link--deal plate_link">
+				Подробнее
+			</a>
+	</div>
+<div class="text" style="left: 20px;top: 281px;color: #ffffff;">
+
+			Купили: 7939	
 </div>
 </body>
 </html>
