--- a/index.html
+++ b/index.html
@@ -80,5 +80,23 @@
 
 			Купили: 7939	
 </div>
+	<div class="images2">
+		    <a href="https://chocolife.me/40147-kazakhskiy-gosudarstvenniy-tsirk/"  >
+						<img
+				width="315"
+				height="315"
+				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/40147.jpg?v=1518005796"
+				class="e-plate__img"
+				alt="Цирк! Цирк! Цирк! Артисты «Большого Московского цирка» и «Цирка Никулина» с новой зажигательной программой ждут вас 10 и 11 февраля! Билеты со скидкой 30%!"
+				/>
+			</a>
+					<a href="https://chocolife.me/40147-kazakhskiy-gosudarstvenniy-tsirk/" class="e-link--deal plate_link">
+				Подробнее
+			</a>
+	</div>
+<div class="text" style="left: 16px;top: 281px;color: #ffffff;">
+
+			Купили: 64	
+</div>
 </body>
 </html>
