--- a/index.html
+++ b/index.html
@@ -98,5 +98,77 @@
 
 			Купили: 64	
 </div>
+	<div class="e-deal__imgs">
+		    <a href="https://chocolife.me/hawaii2/"  >
+						<img
+				width="315"
+				height="315"
+				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/36779.jpg?v=1513356169"
+				class="e-plate__img"
+				alt="Отдохните с семьей и друзьями в тематическом аквапарке Hawaii! Скидка 48% на безлимитный билет в будние и выходные дни!"
+				/>
+			</a>
+					<a href="https://chocolife.me/hawaii2/" class="e-link--deal plate_link">
+				Подробнее
+			</a>
+	</div>
+<div class="b-deals__standard_plate__counter" style="left: 21px;top: 280px;color: #ffffff;">
+
+			Купили: 710	
+</div>
+	<div class="e-deal__imgs">
+		    <a href="https://chocolife.me/medeu2/"  >
+						<img
+				width="315"
+				height="315"
+				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/39564.jpg?v=1515412461"
+				class="e-plate__img"
+				alt="Катайтесь в свое удовольствие на живописном высокогорном катке Медеу в будни и выходные со скидкой 30% до конца сезона!"
+				/>
+			</a>
+					<a href="https://chocolife.me/medeu2/" class="e-link--deal plate_link">
+				Подробнее
+			</a>
+	</div>
+<div class="b-deals__standard_plate__counter" style="left: 21px;top: 282px;color: #ffffff;">
+
+			Купили: 23228	
+</div>
+	<div class="e-deal__imgs">
+		    <a href="https://chocolife.me/36368-delfinariy-nemo/"  >
+						<img
+				width="315"
+				height="315"
+				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/36368.jpg?v=1515480825"
+				class="e-plate__img"
+				alt="Шоу-программа «Дари Любовь»! Весёлое шоу с артистами и морскими обитателями в алматинском дельфинарии Nemo со скидкой 20%!"
+				/>
+			</a>
+					<a href="https://chocolife.me/36368-delfinariy-nemo/" class="e-link--deal plate_link">
+				Подробнее
+			</a>
+	</div>
+<div class="b-deals__standard_plate__counter" style="left: 24px;top: 278px;color: #ffffff;">
+
+			Купили: 610	
+</div>
+	<div class="e-deal__imgs">
+		    <a href="https://chocolife.me/39209-tabagan/"  >
+						<img
+				width="315"
+				height="315"
+				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/39209.jpg?v=1514535832"
+				class="e-plate__img"
+				alt="Проживание в будние и выходные дни в горнолыжном курорте Табаган! Скидка до 55%"
+				/>
+			</a>
+					<a href="https://chocolife.me/39209-tabagan/" class="e-link--deal plate_link">
+				Подробнее
+			</a>
+	</div>
+<div class="b-deals__standard_plate__counter" style="left: 23px;top: 279px;color: #ffffff;">
+
+			Купили: 461	
+</div>
 </body>
 </html>
