--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 			Купили: 64	
 </div>
-	<div class="e-deal__imgs">
+	<div class="images4">
 		    <a href="https://chocolife.me/hawaii2/"  >
 						<img
 				width="315"
@@ -112,11 +112,11 @@
 				Подробнее
 			</a>
 	</div>
-<div class="b-deals__standard_plate__counter" style="left: 21px;top: 280px;color: #ffffff;">
+<div class="text" style="left: 21px;top: 280px;color: #ffffff;">
 
 			Купили: 710	
 </div>
-	<div class="e-deal__imgs">
+	<div class="images5">
 		    <a href="https://chocolife.me/medeu2/"  >
 						<img
 				width="315"
@@ -130,11 +130,11 @@
 				Подробнее
 			</a>
 	</div>
-<div class="b-deals__standard_plate__counter" style="left: 21px;top: 282px;color: #ffffff;">
+<div class="text" style="left: 21px;top: 282px;color: #ffffff;">
 
 			Купили: 23228	
 </div>
-	<div class="e-deal__imgs">
+	<div class="images6">
 		    <a href="https://chocolife.me/36368-delfinariy-nemo/"  >
 						<img
 				width="315"
@@ -148,11 +148,11 @@
 				Подробнее
 			</a>
 	</div>
-<div class="b-deals__standard_plate__counter" style="left: 24px;top: 278px;color: #ffffff;">
+<div class="text" style="left: 24px;top: 278px;color: #ffffff;">
 
 			Купили: 610	
 </div>
-	<div class="e-deal__imgs">
+	<div class="images7">
 		    <a href="https://chocolife.me/39209-tabagan/"  >
 						<img
 				width="315"
@@ -166,7 +166,7 @@
 				Подробнее
 			</a>
 	</div>
-<div class="b-deals__standard_plate__counter" style="left: 23px;top: 279px;color: #ffffff;">
+<div class="text" style="left: 23px;top: 279px;color: #ffffff;">
 
 			Купили: 461	
 </div>
