--- a/index.html
+++ b/index.html
@@ -45,130 +45,24 @@
 </li> 
 </ul>
 </nav>
- <div class="images">
-		    <a href="https://chocolife.me/39540-srk-tabagan/"  >
-						<img
-				width="315"
-				height="315"
-				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/39540.jpg?v=1514292623"
-				class="e-plate__img"
-				alt="Экстремально круто! Абсолютно новый снежный склон ждет вас! Катания на лыжах и сноуборде для взрослых и детей со скидкой до 30% в СРК Табаган!"
-				/>
-			</a>
-					<a href="https://chocolife.me/39540-srk-tabagan/" class="e-link--deal plate_link">
-				Подробнее
-			</a>
-	</div>
-<div class="text" style="left: 14px;top: 280px;color: #005b92;">Купили: 2198	
-</div>
-</div>
-	<div class="images1">
-		    <a href="https://chocolife.me/38525-tau-spa-center/"  >
-						<img
-				width="315"
-				height="315"
-				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/38525.jpg?v=1514447453"
-				class="e-plate__img"
-				alt="Еще дешевле! Посетите уникальный Тау SPA-center в будние и выходные дни со скидкой 61%!"
-				/>
-			</a>
-					<a href="https://chocolife.me/38525-tau-spa-center/" class="e-link--deal plate_link">
-				Подробнее
-			</a>
-	</div>
-<div class="text" style="left: 20px;top: 281px;color: #ffffff;">
-
-			Купили: 7939	
-</div>
-	<div class="images2">
-		    <a href="https://chocolife.me/40147-kazakhskiy-gosudarstvenniy-tsirk/"  >
-						<img
-				width="315"
-				height="315"
-				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/40147.jpg?v=1518005796"
-				class="e-plate__img"
-				alt="Цирк! Цирк! Цирк! Артисты «Большого Московского цирка» и «Цирка Никулина» с новой зажигательной программой ждут вас 10 и 11 февраля! Билеты со скидкой 30%!"
-				/>
-			</a>
-					<a href="https://chocolife.me/40147-kazakhskiy-gosudarstvenniy-tsirk/" class="e-link--deal plate_link">
-				Подробнее
-			</a>
-	</div>
-<div class="text" style="left: 16px;top: 281px;color: #ffffff;">
-
-			Купили: 64	
-</div>
-	<div class="images4">
-		    <a href="https://chocolife.me/hawaii2/"  >
-						<img
-				width="315"
-				height="315"
-				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/36779.jpg?v=1513356169"
-				class="e-plate__img"
-				alt="Отдохните с семьей и друзьями в тематическом аквапарке Hawaii! Скидка 48% на безлимитный билет в будние и выходные дни!"
-				/>
-			</a>
-					<a href="https://chocolife.me/hawaii2/" class="e-link--deal plate_link">
-				Подробнее
-			</a>
-	</div>
-<div class="text" style="left: 21px;top: 280px;color: #ffffff;">
-
-			Купили: 710	
-</div>
-	<div class="images5">
-		    <a href="https://chocolife.me/medeu2/"  >
-						<img
-				width="315"
-				height="315"
-				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/39564.jpg?v=1515412461"
-				class="e-plate__img"
-				alt="Катайтесь в свое удовольствие на живописном высокогорном катке Медеу в будни и выходные со скидкой 30% до конца сезона!"
-				/>
-			</a>
-					<a href="https://chocolife.me/medeu2/" class="e-link--deal plate_link">
-				Подробнее
-			</a>
-	</div>
-<div class="text" style="left: 21px;top: 282px;color: #ffffff;">
-
-			Купили: 23228	
-</div>
-	<div class="images6">
-		    <a href="https://chocolife.me/36368-delfinariy-nemo/"  >
-						<img
-				width="315"
-				height="315"
-				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/36368.jpg?v=1515480825"
-				class="e-plate__img"
-				alt="Шоу-программа «Дари Любовь»! Весёлое шоу с артистами и морскими обитателями в алматинском дельфинарии Nemo со скидкой 20%!"
-				/>
-			</a>
-					<a href="https://chocolife.me/36368-delfinariy-nemo/" class="e-link--deal plate_link">
-				Подробнее
-			</a>
-	</div>
-<div class="text" style="left: 24px;top: 278px;color: #ffffff;">
-
-			Купили: 610	
-</div>
-	<div class="images7">
-		    <a href="https://chocolife.me/39209-tabagan/"  >
-						<img
-				width="315"
-				height="315"
-				src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/39209.jpg?v=1514535832"
-				class="e-plate__img"
-				alt="Проживание в будние и выходные дни в горнолыжном курорте Табаган! Скидка до 55%"
-				/>
-			</a>
-					<a href="https://chocolife.me/39209-tabagan/" class="e-link--deal plate_link">
-				Подробнее
-			</a>
-	</div>
-<div class="text" style="left: 23px;top: 279px;color: #ffffff;">
-
-			Купили: 461	
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Column 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+  <img src="images/39209.jpg" class="img-thumbnail" alt="Tabagan" width="315" height="315"> 
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 3</h3>        
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+  </div>
 </div>
 </body>
 </html>
