--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-  <img src="images/39209.jpg" class="img-thumbnail" alt="Tabagan" width="315" height="315"> 
+  <img src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/39540.jpg?v=1514292623" class="img-thumbnail" alt="Tabagan" width="315" height="315"> 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
