--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Column 1</h3>
+  <img src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/40147.jpg?v=1518005796" class="img-thumbnail" alt="Tau spa" width="315" height="315"> 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
@@ -58,7 +58,7 @@
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Column 3</h3>        
+  <img src="https://img.s3.chocolife.me/static/upload/images/deal/for_plate/38525.jpg?v=1514447453" class="img-thumbnail" alt="Tau spa" width="315" height="315"> 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
